# library_management_system

./: .clang-format  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  install-msodbcsql.sh
app/: CMakeLists.txt  main.cc
components/: CMakeLists.txt
components/catalog_service/: CMakeLists.txt
components/catalog_service/include/catalog_service/: catalog_service.h  i_catalog_service.h
components/catalog_service/src/: catalog_service.cc
components/domain_core/: CMakeLists.txt
components/domain_core/include/domain_core/: author.h  book.h  i_library_item.h  loan_record.h  types.h  user.h
components/domain_core/src/: author.cc  book.cc  loan_record.cc  user.cc
components/loan_service/: CMakeLists.txt
components/loan_service/include/loan_service/: i_loan_service.h  loan_service.h
components/loan_service/src/: loan_service.cc
components/notification_service/: CMakeLists.txt
components/notification_service/include/notification_service/: console_notification_service.h  i_notification_service.h
components/notification_service/src/: console_notification_service.cc
components/persistence_service/: CMakeLists.txt
components/persistence_service/include/persistence_service/: caching_file_persistence_service.h  file_persistence_service.h  i_persistence_service.h  in_memory_persistence_service.h  ms_sql_persistence_service.h  odbc_wrapper.h
components/persistence_service/src/: caching_file_persistence_service.cc  file_persistence_service.cc  in_memory_persistence_service.cc  ms_sql_persistence_service.cc  odbc_wrapper.cc
components/user_service/: CMakeLists.txt
components/user_service/include/user_service/: i_user_service.h  user_service.h
components/user_service/src/: user_service.cc
components/utils/: CMakeLists.txt
components/utils/include/utils/: date_time_utils.h
components/utils/src/: date_time_utils.cc
docs/: Integrating MS SQL Server.md  solid.md
tests/: CMakeLists.txt
tests/catalog_service/: CMakeLists.txt  catalog_service_test.cc
tests/domain_core/: CMakeLists.txt  author_test.cc  book_test.cc  loan_record_test.cc  user_test.cc
tests/loan_service/: CMakeLists.txt  loan_service_test.cc
tests/mocks/: mock_catalog_service.h  mock_notification_service.h  mock_persistence_service.h  mock_user_service.h
tests/notification_service/: CMakeLists.txt  console_notification_service_test.cc
tests/persistence_service/: CMakeLists.txt  in_memory_persistence_service_test.cc
tests/user_service/: CMakeLists.txt  user_service_test.cc
tests/utils/: CMakeLists.txt  date_time_utils_test.cc
